fixed style spacing on Navigation Bar mobile and full screen

--- a/src/components/Navigation/NavItems/NavItems.module.css
+++ b/src/components/Navigation/NavItems/NavItems.module.css
@@ -6,3 +6,23 @@
 .IconButton {
     width: 50px;
 }
+
+.Title {
+    width: 80%;
+}
+
+.LinkContainer {
+    display: flex;
+}
+
+.Link {
+    text-decoration: none;
+    outline: none;
+    text-transform: uppercase;
+    display: inline-block;
+    color: inherit;
+    width: 100%;
+    margin: auto;
+    padding: 12px;
+    text-align: center;
+}
